# adjacency-matrix-property-finder

./: README.md  main.py  pyproject.toml
